unpackaged/main/default/objects/GiftTransaction/GiftTransaction.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>