unpackaged/main/default/objects/GiftTransaction/fields/Acknowledgment_Text__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Text__c</fullName>
    <label>Acknowledgment Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>