unpackaged/main/default/objects/GiftTransaction/fields/Acknowledgment_Text_Rich__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Text_Rich__c</fullName>
    <label>Acknowledgment Text (Rich)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>