unpackaged/main/default/objects/GiftTransaction/fields/New_Gift_Transaction__c.field-meta.xml
<CustomField>
    <fullName>New_Gift_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Gift Transaction</label>
    <referenceTo>GiftTransaction</referenceTo>
    <relationshipLabel>Gift Transactions</relationshipLabel>
    <relationshipName>Gift_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>