unpackaged/main/default/objects/GiftTransaction/fields/NGO_Admin_Fees__c.field-meta.xml
<CustomField>
    <fullName>NGO_Admin_Fees__c</fullName>
    <label>Admin Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>