unpackaged/main/default/objects/GiftTransaction/fields/NGO_Charitable_Amount__c.field-meta.xml
<CustomField>
    <fullName>NGO_Charitable_Amount__c</fullName>
    <label>Charitable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>