unpackaged/main/default/objects/GiftTransaction/fields/NGO_Daily_Low_Price__c.field-meta.xml
<CustomField>
    <fullName>NGO_Daily_Low_Price__c</fullName>
    <label>Daily Low Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>