unpackaged/main/default/objects/GiftTransaction/fields/NGO_Date_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>NGO_Date_of_Sale__c</fullName>
    <label>Date of Sale</label>
    <type>Date</type>
</CustomField>