unpackaged/main/default/objects/GiftTransaction/fields/NGO_Description__c.field-meta.xml
<CustomField>
    <fullName>NGO_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>