unpackaged/main/default/objects/GiftTransaction/fields/NGO_Gift_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>NGO_Gift_Vehicle__c</fullName>
    <label>Gift Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Charitable Gift Annuity</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Pooled Income Fund</fullName>
            </value>
            <value>
                <fullName>Donor Advised Fund</fullName>
            </value>
            <value>
                <fullName>Life Insurance</fullName>
            </value>
            <value>
                <fullName>Bequest</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>