unpackaged/main/default/objects/GiftTransaction/fields/NGO_Gift_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>NGO_Gift_Vehicle_Type__c</fullName>
    <label>Gift Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate Gift Annuity</fullName>
            </value>
            <value>
                <fullName>Flexible Gift Annuity</fullName>
            </value>
            <value>
                <fullName>Deferred Gift Annuity</fullName>
            </value>
            <value>
                <fullName>Charitable Lead Trust</fullName>
            </value>
            <value>
                <fullName>Charitable Remainder Trust</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>