unpackaged/main/default/objects/GiftTransaction/fields/NGO_Number_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>NGO_Number_of_Shares__c</fullName>
    <label>Number of Shares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>