unpackaged/main/default/objects/GiftTransaction/fields/NGO_Ticker__c.field-meta.xml
<CustomField>
    <fullName>NGO_Ticker__c</fullName>
    <label>Ticker</label>
    <length>6</length>
    <type>Text</type>
</CustomField>