unpackaged/main/default/objects/GiftTransaction/fields/NGO_Value_at_Sale__c.field-meta.xml
<CustomField>
    <fullName>NGO_Value_at_Sale__c</fullName>
    <label>Value at Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>