unpackaged/main/default/objects/GiftTransaction/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <label>Referral</label>
    <length>254</length>
    <type>Text</type>
</CustomField>