unpackaged/main/default/objects/GiftTransaction/recordTypes/NGO_Gift_In_Kind_RecordType.recordType-meta.xml
<RecordType>
    <fullName>NGO_Gift_In_Kind_RecordType</fullName>
    <active>true</active>
    <label>Gift-In-Kind</label>
</RecordType>