unpackaged/main/default/objects/GiftTransaction/recordTypes/NGO_One_Time_Gift_RecordType.recordType-meta.xml
<RecordType>
    <fullName>NGO_One_Time_Gift_RecordType</fullName>
    <active>true</active>
    <label>One-Time Gift</label>
</RecordType>