unpackaged/main/default/objects/GiftTransaction/recordTypes/NGO_Payment_RecordType.recordType-meta.xml
<RecordType>
    <fullName>NGO_Payment_RecordType</fullName>
    <active>true</active>
    <label>Payment</label>
</RecordType>