unpackaged/main/default/objects/GiftTransaction/recordTypes/NGO_Planned_Gift_RecordType.recordType-meta.xml
<RecordType>
    <fullName>NGO_Planned_Gift_RecordType</fullName>
    <active>true</active>
    <label>Planned Gift</label>
</RecordType>