unpackaged/main/default/objects/GiftTransaction/recordTypes/NGO_Stock_RecordType.recordType-meta.xml
<RecordType>
    <fullName>NGO_Stock_RecordType</fullName>
    <active>true</active>
    <label>Stock</label>
</RecordType>