unpackaged/main/default/objects/GiftTransaction/listViews/My_Gifts.listView-meta.xml
<ListView>
    <fullName>My_Gifts</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>TransactionDate</columns>
    <columns>CurrentAmount</columns>
    <columns>Status</columns>
    <filterScope>Mine</filterScope>
    <label>My Gifts</label>
</ListView>